cabal-version:      3.0
name:               cuatroenlinea
version:            0.1.0.0
-- synopsis:
-- description:
homepage:           https://github.com/bcardiff/haskell-cuatroenlinea
license:            MIT
license-file:       LICENSE
author:             Brian J. Cardiff
maintainer:         bcardiff@gmail.com
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  
        CLI
        CuatroEnLinea
    -- other-modules:
    -- other-extensions:
    build-depends:    
        base ^>=4.17.2.1,
        aeson ^>= 2.2.3,
        tinyapp ^>=0.2.1.0,
    hs-source-dirs:   src
    default-language: GHC2021

executable cuatroenlinea
    import:           warnings
    main-is:          Main.hs
    ghc-options:      -threaded
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        cuatroenlinea
    hs-source-dirs:   app
    default-language: GHC2021

test-suite cuatroenlinea-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        cuatroenlinea
